# seminario-dgx-spark

./: .gitignore  000_test_torch.py  README.md  main.py  pyproject.toml
demo/ai_toolkit/: alicia_v4.yaml
demo/comfy/workflows/: WAN2-2-Animate.json
demo/space_invaders/: space_invaders.html
